@@ -3,11 +3,6 @@
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2026-01-27T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
       "timestamp": "2026-01-28T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -69,6 +64,11 @@
     },
     {
       "timestamp": "2026-02-09T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
+    {
+      "timestamp": "2026-02-10T00:00:00Z",
       "count": 0,
       "uniques": 0
     }
